src/objects/Handyman_License__c.object
<CustomObject>
    <description>This object contains a record of a Handyman License that a User has obtained.</description>
    <fields>
        <fullName>License_Date__c</fullName>
        <description>This field contains the date that the user achieved the license.</description>
        <inlineHelpText>This field contains the date that the user achieved the license.</inlineHelpText>
        <label>License Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <description>This field describes the license that was achieved by the user.</description>
        <inlineHelpText>This field describes the license that was achieved by the user.</inlineHelpText>
        <label>License</label>
        <picklist>
            <picklistValues>
                <fullName>Handyman Licensed Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handyman Licensed Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handyman Licensed Electrician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handyman Licensed Laborer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handyman Licensed Painter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handyman Licensed Plumber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handyman Licensed Tiler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>This field is a lookup to the user that obtained a Salesforce Certification.</description>
        <inlineHelpText>This field is a lookup to the user that obtained a Salesforce Certification.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Salesforce_Certifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Handyman License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>License_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Handyman Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>